# pefile

./: .pre-commit-config.yaml  ENHANCEMENT_SUMMARY.md  MANIFEST.in  README_MODERN.md  demo_enhancements.py  pefile.py  peutils.py  pyproject.toml  requirements-dev.txt  test_enhancements.py
.github/workflows/: ci.yml
ordlookup/: __init__.py
